--- a/app/src/main/res/layout/rv_month_event_layout.xml
+++ b/app/src/main/res/layout/rv_month_event_layout.xml
@@ -26,8 +26,10 @@
         android:layout_marginTop="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.526"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt1"
+        app:layout_constraintVertical_bias="0.0"
         tools:listitem="@layout/rv_event_layout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
