--- a/app/src/main/res/layout/rv_event_layout.xml
+++ b/app/src/main/res/layout/rv_event_layout.xml
@@ -9,6 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        android:scaleType="centerCrop"
         android:layout_marginTop="10dp"
         android:background="@drawable/bg_img_bday"
         android:src="@drawable/img_birthday"
