--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -20,5 +20,9 @@
         android:id="@+id/nav_upcoming_holidays"
         android:icon="@drawable/nav5"
         android:title="Upcoming Holidays" />
+    <item
+        android:id="@+id/nav_Attendance"
+        android:icon="@drawable/nav5"
+        android:title="Attendance" />
 
 </menu>
