--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -27,6 +27,10 @@
     <item
         android:id="@+id/nav_payroll"
         android:icon="@drawable/nav7"
-        android:title="Payroll"/>
+        android:title="Payroll" />
+    <item
+        android:id="@+id/nav_logout"
+        android:icon="@drawable/nav8"
+        android:title="Log Out" />
 
 </menu>
