--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -7,28 +7,28 @@
     android:background="@drawable/bg_top_round_white"
     tools:context=".Fragment.MainFragment">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="10dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+<!--    <ScrollView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:orientation="vertical"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent">-->
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent">-->
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/mainCard"
                 android:layout_width="match_parent"
-                android:layout_height="350dp"
+                android:layout_height="280dp"
                 android:layout_marginHorizontal="15dp"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="20dp"
                 app:cardCornerRadius="24dp"
-                app:cardElevation="15dp"
+                app:cardElevation="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -39,9 +39,9 @@
 
                     <ImageView
                         android:id="@+id/damru"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:layout_marginTop="15dp"
+                        android:layout_width="75dp"
+                        android:layout_height="75dp"
+                        android:layout_marginTop="5dp"
                         android:src="@drawable/img_damru"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -51,17 +51,17 @@
                         android:id="@+id/llTime"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
+
                         android:gravity="center"
                         android:orientation="horizontal"
-                        android:paddingVertical="10dp"
+                        android:paddingVertical="6dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/damru">
 
                         <androidx.cardview.widget.CardView
-                            android:layout_width="50dp"
-                            android:layout_height="50dp"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
                             android:layout_margin="5dp"
                             app:cardCornerRadius="12dp"
 
@@ -77,7 +77,7 @@
                                 android:text="00"
 
                                 android:textAlignment="center"
-                                android:textSize="25sp"
+                                android:textSize="21sp"
                                 android:textStyle="bold"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
@@ -87,8 +87,8 @@
                         </androidx.cardview.widget.CardView>
 
                         <androidx.cardview.widget.CardView
-                            android:layout_width="50dp"
-                            android:layout_height="50dp"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
                             android:layout_margin="5dp"
                             app:cardCornerRadius="12dp"
                             app:cardElevation="8dp">
@@ -102,13 +102,13 @@
                                 android:gravity="center"
                                 android:text="00"
                                 android:textAlignment="center"
-                                android:textSize="25sp"
+                                android:textSize="21sp"
                                 android:textStyle="bold" />
                         </androidx.cardview.widget.CardView>
 
                         <androidx.cardview.widget.CardView
-                            android:layout_width="50dp"
-                            android:layout_height="50dp"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
                             android:layout_margin="5dp"
                             app:cardCornerRadius="12dp"
                             app:cardElevation="8dp">
@@ -121,7 +121,7 @@
                                 android:gravity="center"
                                 android:text="00"
                                 android:textAlignment="center"
-                                android:textSize="25sp"
+                                android:textSize="21sp"
                                 android:textStyle="bold" />
                         </androidx.cardview.widget.CardView>
 
@@ -132,8 +132,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="25dp"
-                        android:layout_marginTop="10dp"
                         app:cardCornerRadius="18dp"
+                        android:layout_marginTop="3dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/llTime">
@@ -205,7 +205,7 @@
                 android:id="@+id/imageButton"
                 android:layout_width="36dp"
                 android:layout_height="36dp"
-                android:layout_marginTop="25dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="15dp"
                 android:background="@drawable/bg_back_btn"
                 android:src="@drawable/ic_calendar"
@@ -215,7 +215,8 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerViewMonthEvents"
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
+                android:layout_height="0dp"
+                android:layout_marginTop="3dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -223,8 +224,8 @@
                 tools:listitem="@layout/rv_event_layout" />
 
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
+<!--    </ScrollView>-->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
