--- a/app/src/main/res/drawable/bg_blue_corner.xml
+++ b/app/src/main/res/drawable/bg_blue_corner.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white" />
-    <stroke
-        android:width="1dp"
-        android:color="@color/mainColor" />
-    <corners android:radius="10dp" />
+    <solid android:color="@color/white"/>
+    <corners android:radius="10dp"
+        />
+    <stroke android:color="@color/mainColor"
+        android:width="1dp"/>
 </shape>
