--- a/app/src/main/res/layout/fragment_company_details.xml
+++ b/app/src/main/res/layout/fragment_company_details.xml
@@ -32,7 +32,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <EditText
+            <TextView
                 android:id="@+id/employeeIdEt"
                 android:layout_width="match_parent"
                 android:layout_height="42dp"
@@ -41,9 +41,11 @@
                 android:background="@drawable/edittext_layout"
                 android:drawableLeft="@drawable/ic_card"
                 android:drawablePadding="20dp"
+                android:gravity="center_vertical"
                 android:hint="Enter Employee Id"
                 android:inputType="text"
                 android:paddingStart="20dp"
+                android:textAlignment="gravity"
                 android:textColor="@color/black"
                 android:textColorHint="#80282729"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -307,12 +309,12 @@
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/card"
-                app:cardElevation="10dp"
-                app:cardCornerRadius="15dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="25dp"
                 android:layout_marginTop="15dp"
+                app:cardCornerRadius="15dp"
+                app:cardElevation="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/note">
@@ -325,31 +327,29 @@
                         android:id="@+id/tv"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textStyle="bold"
-                        android:text="Salary"
-                        android:gravity="center"
                         android:background="@color/yellow"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toTopOf="@id/basicTv"
-                        android:textColor="@color/white"
+                        android:gravity="center"
                         android:paddingVertical="16dp"
-                        />
+                        android:text="Salary"
+                        android:textColor="@color/white"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toTopOf="@id/basicTv"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
                         android:id="@+id/basicTv"
-                        android:text="Basic"
-                        app:layout_constraintTop_toBottomOf="@id/tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="15dp"
+                        android:layout_marginTop="15dp"
+                        android:text="Basic"
                         android:textColor="@color/black"
                         android:textSize="16sp"
                         android:textStyle="bold"
-                        android:layout_marginTop="15dp"
                         app:layout_constraintStart_toStartOf="parent"
-                        android:layout_marginStart="15dp"
-                        />
+                        app:layout_constraintTop_toBottomOf="@id/tv" />
 
                     <EditText
                         android:id="@+id/basicEt"
@@ -359,7 +359,7 @@
                         android:layout_marginTop="7dp"
                         android:background="@drawable/edittext_layout"
                         android:hint="Enter Basic Salary"
-                        android:inputType="number"
+                        android:inputType="numberDecimal"
                         android:paddingStart="20dp"
                         android:textColor="@color/black"
                         android:textColorHint="#80282729"
@@ -369,17 +369,16 @@
 
                     <TextView
                         android:id="@+id/hourlyTv"
-                        android:text="Hourly Rate"
-                        app:layout_constraintTop_toBottomOf="@id/basicEt"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="15dp"
+                        android:layout_marginTop="20dp"
+                        android:text="Hourly Rate"
                         android:textColor="@color/black"
                         android:textSize="16sp"
                         android:textStyle="bold"
-                        android:layout_marginTop="20dp"
                         app:layout_constraintStart_toStartOf="parent"
-                        android:layout_marginStart="15dp"
-                        />
+                        app:layout_constraintTop_toBottomOf="@id/basicEt" />
 
                     <EditText
                         android:id="@+id/hourlyEt"
@@ -389,25 +388,39 @@
                         android:layout_marginTop="7dp"
                         android:background="@drawable/edittext_layout"
                         android:hint="Enter Hourly Rate"
-                        android:inputType="number"
+                        android:inputType="numberDecimal"
                         android:paddingStart="20dp"
                         android:textColor="@color/black"
                         android:textColorHint="#80282729"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        android:layout_marginBottom="15dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/hourlyTv" />
 
 
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/addOvertimeBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginVertical="20dp"
+                        android:background="@drawable/bg_back_btn"
+                        android:paddingHorizontal="20dp"
+                        android:paddingVertical="10dp"
+                        android:text="Add Overtime"
+                        android:textAllCaps="false"
+                        android:textColor="@color/mainColor"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="@+id/hourlyEt"
+                        app:layout_constraintTop_toBottomOf="@id/hourlyEt" />
 
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.cardview.widget.CardView>
 
+
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/nextBtn"
+                android:id="@+id/btnNext"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="15dp"
