--- a/app/src/main/res/layout/rv_month_event_layout.xml
+++ b/app/src/main/res/layout/rv_month_event_layout.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
-        android:id="@+id/txt1"
+        android:id="@+id/monthTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -28,7 +28,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.526"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt1"
+        app:layout_constraintTop_toBottomOf="@+id/monthTv"
         app:layout_constraintVertical_bias="0.0"
         tools:listitem="@layout/rv_event_layout" />
 
