--- a/app/src/main/res/layout/fragment_company_details.xml
+++ b/app/src/main/res/layout/fragment_company_details.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/bg_top_round_white"
     tools:context=".Fragment.CompanyDetailsFragment">
 
@@ -42,7 +42,7 @@
                 android:drawableLeft="@drawable/ic_card"
                 android:drawablePadding="20dp"
                 android:hint="Enter Employee Id"
-                android:inputType="text"
+
                 android:paddingStart="20dp"
                 android:textColor="@color/black"
                 android:textColorHint="#80282729"
@@ -267,6 +267,7 @@
                     android:orientation="horizontal">
 
                     <RadioButton
+                        android:clickable="false"
                         android:id="@+id/rb_active"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -279,6 +280,7 @@
 
 
                     <RadioButton
+                        android:clickable="false"
                         android:id="@+id/rb_inactive"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -307,12 +309,14 @@
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/card"
-                app:cardElevation="10dp"
-                app:cardCornerRadius="15dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="25dp"
                 android:layout_marginTop="15dp"
+                app:cardCornerRadius="15dp"
+                app:cardElevation="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="15dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/note">
@@ -325,31 +329,29 @@
                         android:id="@+id/tv"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textStyle="bold"
-                        android:text="Salary"
-                        android:gravity="center"
                         android:background="@color/yellow"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toTopOf="@id/basicTv"
-                        android:textColor="@color/white"
+                        android:gravity="center"
                         android:paddingVertical="16dp"
-                        />
+                        android:text="Salary"
+                        android:textColor="@color/white"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toTopOf="@id/basicTv"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
                         android:id="@+id/basicTv"
-                        android:text="Basic"
-                        app:layout_constraintTop_toBottomOf="@id/tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="15dp"
+                        android:layout_marginTop="15dp"
+                        android:text="Basic"
                         android:textColor="@color/black"
                         android:textSize="16sp"
                         android:textStyle="bold"
-                        android:layout_marginTop="15dp"
                         app:layout_constraintStart_toStartOf="parent"
-                        android:layout_marginStart="15dp"
-                        />
+                        app:layout_constraintTop_toBottomOf="@id/tv" />
 
                     <EditText
                         android:id="@+id/basicEt"
@@ -369,17 +371,16 @@
 
                     <TextView
                         android:id="@+id/hourlyTv"
-                        android:text="Hourly Rate"
-                        app:layout_constraintTop_toBottomOf="@id/basicEt"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="15dp"
+                        android:layout_marginTop="20dp"
+                        android:text="Hourly Rate"
                         android:textColor="@color/black"
                         android:textSize="16sp"
                         android:textStyle="bold"
-                        android:layout_marginTop="20dp"
                         app:layout_constraintStart_toStartOf="parent"
-                        android:layout_marginStart="15dp"
-                        />
+                        app:layout_constraintTop_toBottomOf="@id/basicEt" />
 
                     <EditText
                         android:id="@+id/hourlyEt"
@@ -387,19 +388,17 @@
                         android:layout_height="42dp"
                         android:layout_marginHorizontal="20dp"
                         android:layout_marginTop="7dp"
+                        android:layout_marginBottom="15dp"
                         android:background="@drawable/edittext_layout"
                         android:hint="Enter Hourly Rate"
                         android:inputType="number"
                         android:paddingStart="20dp"
                         android:textColor="@color/black"
                         android:textColorHint="#80282729"
-                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        android:layout_marginBottom="15dp"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/hourlyTv" />
-
-
 
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -408,6 +407,7 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/nextBtn"
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="15dp"
