--- a/app/src/main/res/layout/fragment_bank_details.xml
+++ b/app/src/main/res/layout/fragment_bank_details.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/bg_top_round_white"
     tools:context=".Fragment.BankDetailsFragment">
 
@@ -19,13 +19,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
+    <TextView
         android:id="@+id/holderEt"
         android:layout_width="match_parent"
         android:layout_height="42dp"
         android:layout_marginHorizontal="15dp"
         android:layout_marginTop="7dp"
         android:background="@drawable/edittext_layout"
+        android:gravity="center_vertical"
         android:hint="Enter Your Mobile Number"
         android:inputType="textPersonName"
         android:paddingStart="20dp"
@@ -48,13 +49,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/holderEt" />
 
-    <EditText
+    <TextView
         android:id="@+id/accNoEt"
         android:layout_width="match_parent"
         android:layout_height="42dp"
         android:layout_marginHorizontal="15dp"
         android:layout_marginTop="7dp"
         android:background="@drawable/edittext_layout"
+        android:gravity="center_vertical"
         android:hint="Enter Account Number"
         android:inputType="number"
         android:paddingStart="20dp"
@@ -77,13 +79,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/accNoEt" />
 
-    <EditText
+    <TextView
         android:id="@+id/ifscEt"
         android:layout_width="match_parent"
         android:layout_height="42dp"
         android:layout_marginHorizontal="15dp"
         android:layout_marginTop="7dp"
         android:background="@drawable/edittext_layout"
+        android:gravity="center_vertical"
         android:hint="Enter IFSC Code"
         android:inputType="text"
         android:paddingStart="20dp"
@@ -106,13 +109,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ifscEt" />
 
-    <EditText
+    <TextView
         android:id="@+id/bankEt"
         android:layout_width="match_parent"
         android:layout_height="42dp"
         android:layout_marginHorizontal="15dp"
         android:layout_marginTop="7dp"
         android:background="@drawable/edittext_layout"
+        android:gravity="center_vertical"
         android:hint="Enter Name Of Bank"
         android:inputType="textPersonName"
         android:paddingStart="20dp"
@@ -135,11 +139,10 @@
         android:textColor="@color/white"
         android:textSize="17sp"
         android:textStyle="bold"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
