--- a/app/src/main/res/layout/popup_overtime.xml
+++ b/app/src/main/res/layout/popup_overtime.xml
@@ -23,9 +23,10 @@
         android:layout_marginHorizontal="12dp"
         android:layout_marginTop="3dp"
         android:background="@drawable/bg_blue_corner"
-        android:clickable="true"
+        android:clickable="false"
         android:drawableEnd="@drawable/ic_clock"
         android:drawablePadding="15dp"
+        android:editable="false"
         android:hint="from"
         android:padding="5dp"
         android:textColor="@color/black"
@@ -41,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="12dp"
         android:background="@drawable/bg_blue_corner"
-        android:clickable="true"
+        android:clickable="false"
         android:drawableEnd="@drawable/ic_clock"
         android:drawablePadding="15dp"
         android:hint="to"
@@ -53,20 +54,23 @@
         app:layout_constraintStart_toEndOf="@+id/firstTv"
         app:layout_constraintTop_toTopOf="@+id/firstTv" />
 
-    <EditText
+    <TextView
         android:id="@+id/firstAmountEt"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
+        android:background="@drawable/bg_blue_corner"
+        android:gravity="start|center_vertical"
+        android:textAlignment="textStart"
+        android:clickable="false"
+        android:editable="false"
+        android:hint="enter amount....."
         android:inputType="numberDecimal"
         android:padding="5dp"
-        app:layout_constraintTop_toBottomOf="@id/firstTv"
-        app:layout_constraintStart_toStartOf="@id/firstTv"
         app:layout_constraintEnd_toEndOf="@id/secondTv"
-        android:background="@drawable/bg_blue_corner"
-        android:hint="enter amount....."
+        app:layout_constraintStart_toStartOf="@id/firstTv"
 
-        android:layout_marginTop="7dp"
-        />
+        app:layout_constraintTop_toBottomOf="@id/firstTv" />
 
     <TextView
         android:id="@+id/secondOtTv"
@@ -86,9 +90,10 @@
         android:layout_marginHorizontal="12dp"
         android:layout_marginTop="3dp"
         android:background="@drawable/bg_blue_corner"
-        android:clickable="true"
+        android:clickable="false"
         android:drawableEnd="@drawable/ic_clock"
         android:drawablePadding="15dp"
+        android:editable="false"
         android:hint="from"
         android:padding="5dp"
         android:textColor="@color/black"
@@ -105,10 +110,12 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="12dp"
         android:background="@drawable/bg_blue_corner"
-        android:clickable="true"
+        android:clickable="false"
         android:drawableEnd="@drawable/ic_clock"
         android:drawablePadding="15dp"
+        android:editable="false"
         android:hint="to"
+
         android:padding="5dp"
         android:textColor="@color/black"
         android:textStyle="bold"
@@ -117,19 +124,24 @@
         app:layout_constraintStart_toEndOf="@+id/thirdTv"
         app:layout_constraintTop_toTopOf="@+id/thirdTv" />
 
-    <EditText
+    <TextView
         android:id="@+id/secondAmountEt"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/thirdTv"
-        app:layout_constraintStart_toStartOf="@id/thirdTv"
-        app:layout_constraintEnd_toEndOf="@id/fourthTv"
+        android:layout_marginTop="7dp"
+        android:layout_marginBottom="15dp"
         android:background="@drawable/bg_blue_corner"
+        android:clickable="false"
+        android:editable="false"
+        android:gravity="start|center_vertical"
+        android:textAlignment="textStart"
         android:hint="enter amount....."
         android:inputType="numberDecimal"
         android:padding="5dp"
-        android:layout_marginTop="7dp"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/fourthTv"
+        app:layout_constraintStart_toStartOf="@id/thirdTv"
+        app:layout_constraintTop_toBottomOf="@id/thirdTv" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/submitBtn"
@@ -143,6 +155,7 @@
         android:text="Submit"
         android:textColor="@color/white"
         android:textStyle="bold"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
