--- a/app/src/main/res/layout/fragment_attendance.xml
+++ b/app/src/main/res/layout/fragment_attendance.xml
@@ -192,6 +192,7 @@
             app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
             <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/txtLeft"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -213,6 +214,7 @@
 
             <androidx.appcompat.widget.AppCompatImageButton
                 android:layout_width="wrap_content"
+                android:id="@+id/txtRight"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
@@ -232,9 +234,9 @@
             app:layout_constraintTop_toBottomOf="@+id/secondLl" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:id="@+id/recyclerView"
             android:layout_marginTop="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
