--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,6 +7,8 @@
     android:background="@drawable/blue_bg"
     tools:context=".LoginActivity">
 
+
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/mainCl"
         android:layout_width="match_parent"
@@ -56,9 +58,9 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/phoneEt"
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:inputType="phone"
-                android:maxLength="13"
-                android:layout_height="wrap_content" />
+                android:maxLength="13" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -69,48 +71,46 @@
             android:layout_marginHorizontal="15dp"
             android:layout_marginTop="20dp"
             android:hint="Password"
-            app:passwordToggleEnabled="true"
-            app:passwordToggleDrawable="@drawable/login_password_hide_show"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/phoneTf">
+            app:layout_constraintTop_toBottomOf="@id/phoneTf"
+            app:passwordToggleDrawable="@drawable/login_password_hide_show"
+            app:passwordToggleEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/passwordEt"
-                android:inputType="textPassword"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
             android:id="@+id/tv3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/passwordTf"
             android:layout_marginTop="15dp"
+            android:layout_marginEnd="15dp"
             android:text="@string/login_tv3"
             android:textColor="@color/black"
             android:textStyle="bold"
-            android:layout_marginEnd="15dp"
-            />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/passwordTf" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/loginBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="15dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv3"
             android:layout_marginTop="30dp"
+            android:background="@drawable/login_btn_bg"
+            android:paddingVertical="18dp"
             android:text="Login"
             android:textColor="@color/white"
             android:textSize="17sp"
             android:textStyle="bold"
-            android:background="@drawable/login_btn_bg"
-            android:paddingVertical="18dp"
-            />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv3" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -132,13 +132,13 @@
 
 
             <ImageView
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:src="@drawable/ic_login_logo" />
+                android:src="@drawable/ic_login_logo"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
