--- a/app/src/main/res/layout/fragment_upcoming_holidays.xml
+++ b/app/src/main/res/layout/fragment_upcoming_holidays.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/bg_top_round_white"
     tools:context=".Fragment.UpcomingHolidaysFragment">
 
@@ -20,7 +20,8 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.AppCompatImageButton
-            android:layout_width="wrap_content"
+            android:id="@+id/leftScroll"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"
@@ -29,7 +30,8 @@
             android:textColor="@color/black" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:id="@+id/monthTv"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"
@@ -40,14 +42,14 @@
             android:textStyle="bold" />
 
         <androidx.appcompat.widget.AppCompatImageButton
-            android:layout_width="wrap_content"
+            android:id="@+id/rightScroll"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"
             android:background="@color/white"
             android:src="@drawable/ic_next_btn" />
     </LinearLayout>
-
 
 
     <com.github.sundeepk.compactcalendarview.CompactCalendarView xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -69,8 +71,7 @@
         app:guidelineUseRtl="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/secondLl"
-        />
+        app:layout_constraintTop_toBottomOf="@id/secondLl" />
 
 
     <TextView
@@ -81,20 +82,20 @@
         android:text="Holiday"
         android:textColor="@color/black"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/compactcalendar_view"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/compactcalendar_view"
         tools:layout_editor_absoluteY="385dp" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/holidayRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="15dp"
         android:paddingHorizontal="15dp"
-        android:id="@+id/holidayRecyclerView"
-        tools:listitem="@layout/holiday_layout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv1" />
+        app:layout_constraintTop_toBottomOf="@id/tv1"
+        tools:listitem="@layout/holiday_layout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
