--- a/app/src/main/res/layout/holiday_layout.xml
+++ b/app/src/main/res/layout/holiday_layout.xml
@@ -24,6 +24,7 @@
             android:padding="13dp">
 
             <TextView
+                android:id="@+id/holidayDay"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -34,6 +35,7 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/holidayDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -69,6 +71,7 @@
             android:padding="13dp">
 
             <TextView
+                android:id="@+id/holidayName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -79,6 +82,7 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/holidayTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
