--- a/app/src/main/res/layout/activity_personal_details.xml
+++ b/app/src/main/res/layout/activity_personal_details.xml
@@ -51,7 +51,7 @@
                 android:layout_width="118dp"
                 android:layout_height="118dp"
                 android:layout_marginTop="20dp"
-                android:src="@drawable/img_add_employee"
+                android:src="@drawable/img_dp"
                 app:civ_border_color="@color/black"
                 app:civ_border_width="1dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -153,7 +153,6 @@
                 android:background="@drawable/edittext_layout"
                 android:clickable="true"
                 android:drawableStart="@drawable/ic_cake"
-                android:drawableLeft="@drawable/ic_profile"
                 android:drawableEnd="@drawable/ic_calendar"
                 android:drawablePadding="20dp"
                 android:gravity="center_vertical"
