--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,7 +54,7 @@
                 android:layout_width="37dp"
                 android:layout_height="37dp"
                 android:layout_marginEnd="15dp"
-                android:src="@drawable/img_user"
+                android:src="@drawable/img_dp"
                 app:layout_constraintBottom_toBottomOf="@id/toolbar"
                 app:layout_constraintEnd_toEndOf="@id/toolbar"
                 app:layout_constraintTop_toTopOf="@id/toolbar" />
