--- a/app/src/main/res/layout/fragment_attendance.xml
+++ b/app/src/main/res/layout/fragment_attendance.xml
@@ -202,6 +202,7 @@
                 android:textColor="@color/black" />
 
             <TextView
+                android:id="@+id/monthTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
