--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -204,7 +204,9 @@
             <ImageButton
                 android:id="@+id/imageButton"
                 android:layout_width="36dp"
+                android:visibility="invisible"
                 android:layout_height="36dp"
+                android:clickable="false"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="15dp"
                 android:background="@drawable/bg_back_btn"
